MalefStorm: External .env for BOT_TOKEN

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  config:
+    import:
+      optional:file:.env[.properties]
   application:
     name: MedCalcHelp
   sql:
@@ -22,4 +25,4 @@ spring:
     defer-datasource-initialization: true
 bot:
   name: "PavelLazyBot"
-  token: ${BOT_TOKEN:}
+  token: ${BOT_TOKEN}
